# qxengine-core

./: .gitignore  ALAMTOLOGI.md  CMakeLists.txt  README.md  RELEASE_POLICY.md
.github/workflows/: core.yml  release.yml
cmake/: QXEngineCompilerFlags.cmake  QXEngineInstall.cmake  QXEngineVersion.cmake  qx_version.h.in  qxengineConfig.cmake.in
docs/api/: core.md  intelligence.md  law.md  manifest.md  memory.md  telemetry.md
docs/architecture/: c-abi-boundary.md  constitutional-laws.md  memory-model.md  overview.md
docs/contributing/: coding-standards.md  testing-guide.md
docs/integration/: android-ndk.md  cli-bridge.md  ios-xcframework.md
include/qxengine/: qxengine.h
include/qxengine/core/: qx_constants.h  qx_error.h  qx_types.h  qx_version.h
include/qxengine/intelligence/: qx_snapshot.h  qx_snapshot_types.h
include/qxengine/law/: qx_law_enforcer.h  qx_law_enforcer_types.h  qx_law_report.h  qx_law_types.h
include/qxengine/manifest/: qx_manifest.h  qx_manifest_types.h
include/qxengine/memory/: qx_leaf.h  qx_luman.h  qx_luman_init.h  qx_memloc.h  qx_memloc_constitutional.h  qx_memloc_enforce.h  qx_memloc_flow.h  qx_memloc_pool.h  qx_memloc_signal.h  qx_pressure.h  qx_segment.h
include/qxengine/telemetry/: qx_telemetry.h  qx_telemetry_event_types.h  qx_telemetry_types.h
src/core/: qx_constants.cpp  qx_engine.cpp  qx_engine_eval.cpp  qx_engine_integrity.cpp  qx_engine_internal.h  qx_engine_memloc_bridge.cpp  qx_engine_memloc_bridge.h  qx_error.cpp
src/intelligence/: qx_snapshot.cpp
src/law/: qx_law_enforcer.cpp  qx_law_enforcer_eval.cpp  qx_law_enforcer_history.cpp  qx_law_types.cpp
src/manifest/: qx_manifest.cpp  qx_manifest_internal.h  qx_manifest_parser.cpp  qx_manifest_validation.cpp
src/memory/: qx_leaf.cpp  qx_luman_budget.c  qx_luman_init.c  qx_luman_peringkat.c  qx_memloc.cpp  qx_memloc_constitutional.c  qx_memloc_constitutional_luman.c  qx_memloc_constitutional_report.c  qx_memloc_enforce_cycle.c  qx_memloc_enforce_equil.c  qx_memloc_enforce_internal.h  qx_memloc_enforce_pressure.c  qx_memloc_enforce_restore.c  qx_memloc_flow_alloc.c  qx_memloc_flow_budget.c  qx_memloc_flow_internal.h  qx_memloc_flow_state.c  qx_memloc_flow_trigger.c  qx_memloc_pool.c  qx_memloc_pool_commit.c  qx_memloc_pool_internal.h  qx_memloc_pool_luman.c  qx_memloc_pool_query.c  qx_memloc_signal_cycle.c  qx_memloc_signal_internal.h  qx_memloc_signal_measure.c  qx_memloc_signal_registry.c  qx_pressure.cpp  qx_pressure_api.cpp  qx_pressure_internal.h  qx_segment.cpp  qx_segment_api.cpp  qx_segment_internal.h
src/platform/: qx_platform_ram.h  qx_platform_ram_android.c  qx_platform_ram_host.c  qx_platform_ram_ios.m
src/telemetry/: qx_telemetry.cpp
tests/: CMakeLists.txt  test_qx_luman.cpp  test_qx_luman_init.cpp  test_qx_memloc_constitutional.cpp  test_qx_memloc_constitutional_api.cpp
tests/fixtures/manifests/: failing-example.qxmanifest  minimal-app.qxmanifest  qiubbx.qxmanifest
tests/integration/: test_full_evaluation_cycle.cpp  test_manifest_golden.cpp  test_manifest_validation.cpp  test_qx_engine_constitutional.cpp
tests/unit/: test_qx_law_enforcer.cpp  test_qx_leaf.cpp  test_qx_manifest.cpp  test_qx_manifest_accessors.cpp  test_qx_memloc.cpp  test_qx_pressure.cpp  test_qx_segment.cpp  test_qx_snapshot.cpp  test_qx_telemetry.cpp
